# root

.github/: CODEOWNERS
cmake/modules/: RootBuildOptions.cmake  SearchInstalledSoftware.cmake
config/: rootrc.in
core/base/inc/: TApplication.h  TVirtualPad.h
core/base/src/: TApplication.cxx  TROOT.cxx
graf2d/asimage/inc/: TASImage.h
graf2d/asimage/src/: TASImage.cxx  TASPluginGS.cxx
graf2d/cocoa/inc/: TGQuartz.h
graf2d/cocoa/src/: TGQuartz.mm
graf2d/gpad/inc/: TPad.h
graf2d/gpad/src/: TPad.cxx  TPadPainterBase.cxx
graf2d/gpadv7/src/: RAttrBase.cxx
graf2d/graf/inc/: LinkDef.h  TTF.h
graf2d/graf/src/: TMathText.cxx  TTF.cxx
graf2d/win32gdk/inc/: TGWin32.h
graf2d/win32gdk/src/: TGWin32.cxx
graf2d/x11/inc/: TGX11.h
graf2d/x11/src/: TGX11.cxx
graf2d/x11ttf/inc/: TGX11TTF.h
graf2d/x11ttf/src/: TGX11TTF.cxx
graf3d/gl/src/: TGLFontManager.cxx
gui/browserv7/src/: RBrowsableSysFile.cxx
gui/fitpanelv7/src/: RFitPanel6.cxx
gui/gui/src/: TGApplication.cxx  TGPicture.cxx  TGTextEditDialogs.cxx
gui/webdisplay/src/: RWebDisplayHandle.cxx  RWebWindowsManager.cxx
hist/hist/src/: TEfficiency.cxx  TF1.cxx  TGraph2D.cxx
hist/histpainter/src/: TPainter3dAlgorithms.cxx
html/src/: TClassDocOutput.cxx  THtml.cxx
io/io/: CMakeLists.txt
io/io/inc/: LinkDef.h
io/io/src/: TFile.cxx
net/http/inc/: THttpServer.h
net/http/src/: TCivetweb.cxx  THttpServer.cxx
roottest/root/io/event01/: CMakeLists.txt  Event.cxx  Event.h  MainEvent.cxx
test/: stressGraphics.cxx
tutorials/: CMakeLists.txt
tutorials/legacy/: benchmarks.C
(+35 files in other folders)
